--- a/happy_halloween/package.json
+++ b/happy_halloween/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@svgr/cli": "^5.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -13,7 +14,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-sound": "^1.2.0",
+    "react-typed": "^1.2.0",
     "redux": "^4.0.5",
+    "typed.js": "^2.0.12",
     "video-react": "^0.14.1"
   },
   "scripts": {
