--- a/happy_halloween/package.json
+++ b/happy_halloween/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "boxicons": "^2.0.7",
+    "gsap": "^3.6.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
